@@ -1,20 +1,23 @@
 import martian
 from martian.error import GrokError
 
-import grokcore.component
 import grokcore.view
+import grokcore.viewlet
 import grokcore.security
+import grokcore.component
+
 from grokcore.security.util import protect_getattr
 from grokcore.view.meta.views import ViewSecurityGrokker, default_view_name
 
 from zope.configuration.exceptions import ConfigurationError
 from zope.app.publisher.browser.menumeta import menuDirective, \
-    menuItemDirective, subMenuItemDirective
+     menuItemDirective, subMenuItemDirective
 
 from zope.publisher.interfaces.browser import IDefaultBrowserLayer
 from zope.publisher.interfaces.browser import IBrowserPage
 
 import megrok.menu
+
 
 class MenuGrokker(martian.ClassGrokker):
     martian.component(megrok.menu.Menu)
@@ -28,6 +31,7 @@ class MenuGrokker(martian.ClassGrokker):
                       title=title, description=description)
         return True
 
+
 class SubMenuItemGrokker(martian.ClassGrokker):
     martian.component(megrok.menu.SubMenuItem)
 
@@ -37,22 +41,28 @@ class SubMenuItemGrokker(martian.ClassGrokker):
     martian.directive(grokcore.component.name, get_default=default_view_name)
     martian.directive(grokcore.component.title, default=u'')
     martian.directive(grokcore.component.description, default=u'')
+    martian.directive(grokcore.viewlet.order)
     martian.directive(grokcore.component.context)
     martian.directive(grokcore.view.layer, default=IDefaultBrowserLayer)
     martian.directive(grokcore.security.require, name='permission')
 
     martian.directive(megrok.menu.menuitem)
 
-    def execute(self, factory, config, name, title, description, \
-                    menuitem=None, context=None, layer=None, permission=None):
+    def execute(self, factory, config, name, title, description,
+                order = None, menuitem=None, context=None,
+                layer=None, permission=None):
 
         menuDirective(config, id=name, class_=factory,
                       title=title, description=description)
-
+        
         if menuitem is None:
             return False
 
-        menu_id, icon, filter, order, extra = menuitem
+        menu_id, icon, filter, enforced_order, extra = menuitem
+       
+        if enforced_order is None:
+            enforced_order = order[0] or 0
+
         try:
             menu = config.resolve('zope.app.menus.'+menu_id)
         except ConfigurationError, v:
@@ -60,10 +70,12 @@ class SubMenuItemGrokker(martian.ClassGrokker):
                             "megrok.menu.Menu to register a menu first."
                             % menu_id, factory)
 
-        subMenuItemDirective(config, menu=menu, for_=context, submenu=name,
-                          title=title, description=description, icon=icon,
-                          filter=filter, permission=permission, layer=layer,
-                          order=order, action='', extra=extra)
+        subMenuItemDirective(
+            config, menu=menu, for_=context, submenu=name,
+            title=title, description=description, icon=icon,
+            filter=filter, permission=permission, layer=layer,
+            order=enforced_order, action='', extra=extra
+            )
 
         for method_name in IBrowserPage:
             if method_name == '__call__':
@@ -73,23 +85,30 @@ class SubMenuItemGrokker(martian.ClassGrokker):
                 callable=protect_getattr,
                 args=(factory, method_name, permission),
                 )
-
         return True
+
 
 class MenuItemGrokker(ViewSecurityGrokker):
     martian.directive(megrok.menu.menuitem)
     martian.directive(grokcore.component.context)
+    martian.directive(grokcore.viewlet.order)
     martian.directive(grokcore.view.layer, default=IDefaultBrowserLayer)
     martian.directive(grokcore.component.name, get_default=default_view_name)
     martian.directive(grokcore.component.title, default=u'')
     martian.directive(grokcore.component.description, default=u'')
 
-    def execute(self, factory, config, permission, context=None, layer=None, \
-                   name=u'', menuitem=None, description=u'', title=u''):
+    def execute(self, factory, config, permission, order, context=None,
+                layer=None, name=u'', menuitem=None, description=u'',
+                title=u''):
 
         if menuitem is None:
             return False
-        menu_id, icon, filter, order, extra = menuitem
+        
+        menu_id, icon, filter, enforced_order, extra = menuitem
+        
+        if enforced_order is None:
+            enforced_order = order[0] or 0
+
         try:
             menu = config.resolve('zope.app.menus.'+menu_id)
         except ConfigurationError, v:
@@ -99,7 +118,7 @@ class MenuItemGrokker(ViewSecurityGrokker):
         menuItemDirective(config, menu=menu, for_=context, action=name,
                           title=title, description=description, icon=icon,
                           filter=filter, permission=permission, layer=layer,
-                          order=order, extra=extra)
+                          order=enforced_order, extra=extra)
 
         # Menu items check whether the view that they refer to can be
         # traversed to.  Unfortunately, views will end up being
